fix overflow issue (#2997)

--- a/src/modules/market/components/market-trade-history/market-trade-history.styles.less
+++ b/src/modules/market/components/market-trade-history/market-trade-history.styles.less
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+  max-height: 100%;
 
   @media @breakpoint-mobile {
     max-height: 400px;
